# deez

./: .gitignore  Cargo.toml  README.md
deez_derive/: Cargo.toml
deez_derive/src/: lib.rs  macro_rules.rs  macros.rs  types.rs
macro_deez_derive/: Cargo.toml
macro_deez_derive/src/: lib.rs
src/: deez.rs  error.rs  lib.rs  macros.rs  main.rs  mocks.rs  test.rs  types.rs
src/deez/: batch_get.rs  batch_write.rs  create.rs  delete.rs  query.rs  scan.rs  update.rs
src/macros/: batch_write.rs  create.rs  query.rs  remove.rs
src/types/: error.rs  schema.rs
tests/: integration.rs
tests/deez/: create.rs  mod.rs  query.rs  update.rs
tests/operations/: batch_write.rs  create.rs  delete.rs  mod.rs  query.rs  update.rs
tests/schemas/: foo.rs  mod.rs
