[package]
name = "deez"
version = "0.2.0"
edition = "2021"
authors = ["Wyatt Goettsch <wyatt.goettsch@gmail.com>"]
description = "abstraction for DynamoDB"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Sife-ops/deez"
keywords = ["dynamodb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-dynamodb = "0.28.0"
deez_derive = { version = "0.2.0", path = "deez_derive" }
thiserror = "1.0.40"

[dev-dependencies]
aws-config = "0.55.3"
tokio = { version = "1", features = ["macros"] }
chrono = "0.4.26"
anyhow = "1.0.71"
