[package]
name = "deez_derive"
version = "0.1.0"
edition = "2021"
authors = ["Wyatt Goettsch <wyatt.goettsch@gmail.com>"]
description = "derive macros for deez"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Sife-ops/deez"
keywords = ["dynamodb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.59"
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full"] }

[lib]
proc-macro = true
