[package]
name = "deez_derive"
version = "0.2.2"
edition = "2021"
authors = ["Wyatt Goettsch <wyatt.goettsch@gmail.com>"]
description = "derive macros for deez"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Sife-ops/deez"
keywords = ["dynamodb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attribute-derive = "0.6.1"
proc-macro2 = "1.0.60"
quote = "1.0.28"
regex = "1.8.4"
syn = "2.0.18"

[lib]
proc-macro = true
